- setup celery for background tasks - Added POST code in view function

--- a/document_manager/templates/document_manager/_document_upload.jinja
+++ b/document_manager/templates/document_manager/_document_upload.jinja
@@ -1,16 +1,3 @@
-{% if is_success %}
-    <div class="alert alert-success py-1 mb-2">
-        success_message
-  </div>
-{% endif %}
-{% if has_errors %}
-    <ul class="list-group">
-        {%for err in errors %}
-        <li class="list-group-item list-group-item-danger">{{err}}</li>
-        {% endfor %}
-    </ul>
-{% endif %}
-
 <form method="post" enctype="multipart/form-data" 
 hx-post="{{ url('documents:document_upload_panel') }}" hx-target='#doc-upload-panel' hx-swap='innerHTML'>
 {% csrf_token %}
@@ -26,3 +13,15 @@ hx-post="{{ url('documents:document_upload_panel') }}" hx-target='#doc-upload-pa
         Upload
     </button>
 </form>
+{% if is_success %}
+    <div class="alert alert-success py-1 mb-2">
+        {{success_message}}
+  </div>
+{% endif %}
+{% if has_errors %}
+    <ul class="list-group">
+        {%for err in errors %}
+        <li class="list-group-item list-group-item-danger">{{err}}</li>
+        {% endfor %}
+    </ul>
+{% endif %}
