--- a/document_manager/templates/document_manager/_document_list.jinja
+++ b/document_manager/templates/document_manager/_document_list.jinja
@@ -5,6 +5,7 @@
               <th>Title</th>
               <th>Status</th>
               <th>Uploaded</th>
+              <th>Action</th>
           </tr>
       </thead>
       <tbody>
@@ -23,6 +24,14 @@
                   {% endif %}
               </td>
               <td>{{ doc.created_at.strftime('%Y-%m-%d') }}</td>
+              <td>
+                <button  class="btn btn-danger btn-sm" hx-post="{{ url('document_manager:delete_document', args=[doc.id])}}"
+                hx-confirm="Are you sure you want to delete this document ?" hx-trigger="click" {% if doc.status != 'ready' %} disabled {% endif %}
+                >Delete</button>
+                <button  class="btn btn-outline-secondary btn-sm" hx-post="{{ url('document_manager:reindex_document', args=[doc.id])}}"
+                hx-confirm="Re-index document ? this will rebuild embeddings" hx-trigger="click" {% if doc.status != 'ready' %} disabled {% endif %}
+                >Re-index</button>
+              </td>
           </tr>
           {% endfor %}
       </tbody>
