--- a/document_manager/templates/document_manager/document_search_base.jinja
+++ b/document_manager/templates/document_manager/document_search_base.jinja
@@ -22,7 +22,7 @@
             class="col-12"
             id="search-results-panel"
             hx-get="{{ url('document_manager:document_search_result_panel') }}"
-            hx-trigger="load"
+            hx-trigger="load, document-deleted from:body"
             hx-target="this"
             hx-swap="innerHTML"
         >
@@ -31,6 +31,4 @@
     </div>
 
 </div>
-
-
 {% endblock %}
