- organized some files - added progress bar in file indexing - add model name, token count and chunk count

--- a/document_manager/templates/document_manager/document_base.jinja
+++ b/document_manager/templates/document_manager/document_base.jinja
@@ -11,7 +11,12 @@
             <div
                 id="doc-list-panel"
                 hx-get="{{ url('documents:document_list_panel') }}"
-                hx-trigger="load, document-uploaded from:body, document-deleted from:body, document-reindexed from:body"
+                hx-trigger="load, 
+                    document-uploaded from:body, 
+                    document-deleted from:body, 
+                    document-reindexed from:body,
+                    document-indexed from:body
+                    "
                 hx-target="this"
                 hx-swap="innerHTML"
             >
