--- a/document_manager/templates/document_manager/_document_upload.jinja
+++ b/document_manager/templates/document_manager/_document_upload.jinja
@@ -1,5 +1,5 @@
 <form method="post" enctype="multipart/form-data" 
-hx-post="{{ url('documents:document_upload_panel') }}" hx-target='#doc-upload-panel' hx-swap='innerHTML'>
+hx-post="{{ url('document_manager:document_upload_panel') }}" hx-target='#upload-modal-body' hx-swap='innerHTML'>
 {% csrf_token %}
     <div class="mb-3">
         <label class="form-label">Title</label>
@@ -9,9 +9,12 @@ hx-post="{{ url('documents:document_upload_panel') }}" hx-target='#doc-upload-pa
         <label class="form-label">File</label>
         {{ form.file }}
     </div>
-    <button type="submit" class="btn btn-success">
-        Upload
-    </button>
+    <div class="float-right">
+        <button type="submit" class="btn btn-success" data-submit-button>
+            Upload
+        </button>
+    </div>
+    
 </form>
 {% if is_success %}
     <div class="alert alert-success py-1 mb-2">
