- Added threshold to similarity search - Added highlight to the relevant text - Added document-level aggregation to the search result

--- a/document_manager/templates/document_manager/base.jinja
+++ b/document_manager/templates/document_manager/base.jinja
@@ -9,6 +9,8 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="{{ static('css/bootstrap.min.css') }}" />
 
+    <link rel="stylesheet" href="{{ static('css/app_styles.css') }}" />
+
     {% block extra_css %}{% endblock %}
   </head>
   <body>
