--- a/document_manager/templates/document_manager/_search_input_panel.jinja
+++ b/document_manager/templates/document_manager/_search_input_panel.jinja
@@ -1,35 +1,28 @@
-<form id="search-form">
+<form id="search-form"
+    hx-get="{{ url('document_manager:document_search_result_panel') }}"
+    hx-target="#search-results-panel"
+    hx-trigger="submit"
+    hx-include="#search-form"
+    >
 
-    <div class="input-group mb-3">
-        <input
-            type="text"
-            class="form-control"
-            name="q"
-            placeholder="Search..."
-            hx-get="{{ url('document_manager:document_search_result_panel') }}"
-            hx-target="#search-results-panel"
-            hx-trigger="keyup changed delay:400ms"
-            hx-include="#search-form"
-        >
+    <div class="row g-2">
+        <div class="col-md-8">
+            <input type="text" class="form-control" name="q"
+                placeholder="Search..." autocomplete="off" required>
+        </div>
+        <div class="col-md-3">
+            <select name="threshold" id="threshold-select" class="form-select">
+                <option value="0.9">Strict (0.90)</option>
+                <option value="0.75">High (0.75)</option>
+                <option value="0.60" selected>Balanced (0.60)</option>
+                <option value="0.45">Loose (0.45)</option>
+                <option value="0.30">Very Loose (0.40)</option>
+            </select>
+        </div>
+        <div class="col-md-1 d-grid">
+            <button class="btn btn-primary" type="submit">
+                Search
+            </button>
+        </div>
     </div>
-
-    <div class="input-group">
-        <label class="input-group-text" for="threshold-select">Threshold</label>
-        <select
-            name="threshold"
-            id="threshold-select"
-            class="form-select"
-            hx-get="{{ url('document_manager:document_search_result_panel') }}"
-            hx-target="#search-results-panel"
-            hx-trigger="change"
-            hx-include="#search-form"
-        >
-            <option value="0.9">Strict (0.90)</option>
-            <option value="0.75">High (0.75)</option>
-            <option value="0.60" selected>Balanced (0.60)</option>
-            <option value="0.45">Loose (0.45)</option>
-            <option value="0.30">Very Loose (0.40)</option>
-        </select>
-    </div>
-
 </form>
