--- a/document_manager/templates/document_manager/document_navbar.jinja
+++ b/document_manager/templates/document_manager/document_navbar.jinja
@@ -9,6 +9,9 @@
       <li class="nav-item active">
         <a class="nav-link" href="{{ url('document_manager:document_search')}}">Search</a>
       </li>
+      <li class="nav-item active">
+        <a class="nav-link" href="{{ url('document_manager:search_analytics')}}">Analytics</a>
+      </li>
       
       {# <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
