--- a/document_manager/templates/document_manager/document_navbar.jinja
+++ b/document_manager/templates/document_manager/document_navbar.jinja
@@ -1,11 +1,14 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" href="{{ url('documents:document_dashboard')}}">Document Search Engine</a>
+  <a class="navbar-brand" href="{{ url('documents:document_dashboard')}}">Document Search</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
 
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
+      <li class="nav-item active">
+        <a class="nav-link" href="{{ url('document_manager:document_dashboard')}}">Documents</a>
+      </li>
       <li class="nav-item active">
         <a class="nav-link" href="{{ url('document_manager:document_search')}}">Search</a>
       </li>
