- FIxed navbar - Added Logout button - Added Signup page - Added anchor for login and signup on the respective pages

--- a/auth_manager/templates/auth_manager/login.jinja
+++ b/auth_manager/templates/auth_manager/login.jinja
@@ -24,6 +24,10 @@
             <button class="btn btn-primary w-100" type="submit">
                 Login
             </button>
+            <p class="mt-3 text-muted">
+                Don't have an account?
+            <a href="{{ url('auth_manager:auth_signup') }}">Sign up</a>
+</p>
 
         </form>
         {% if has_errors == True %}
