--- a/document_manager/templates/document_manager/base.jinja
+++ b/document_manager/templates/document_manager/base.jinja
@@ -18,13 +18,13 @@
     {% endblock %}
 
     <!-- HTMX -->
-    <script src="{{ static('js/htmx.min.js') }}"></script>
+    <script src="{{ static('js/htmx.min.js') }}" type="text/javascript"></script>
 
     <!-- Alpine.js -->
-    <script src="{{ static('js/alpine.min.js') }}" defer></script>
+    <script src="{{ static('js/alpine.min.js') }}" type="text/javascript" defer></script>
 
     <!-- Bootstrap JS -->
-    <script src="{{ static('js/bootstrap.bundle.min.js') }}"></script>
+    <script src="{{ static('js/bootstrap.bundle.min.js') }}" type="text/javascript"></script>
 
     {% block extra_js %}{% endblock %}
 
