--- a/document_manager/templates/document_manager/document_navbar.jinja
+++ b/document_manager/templates/document_manager/document_navbar.jinja
@@ -1,39 +1,29 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" href="{{ url('documents:document_dashboard')}}">Document Search</a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-
-  <div class="collapse navbar-collapse" id="navbarSupportedContent">
-    <ul class="navbar-nav mr-auto">
-      <li class="nav-item active">
-        <a class="nav-link" href="{{ url('document_manager:document_dashboard')}}">Documents</a>
-      </li>
-      <li class="nav-item active">
-        <a class="nav-link" href="{{ url('document_manager:document_search')}}">Search</a>
-      </li>
-      <li class="nav-item active">
-        <a class="nav-link" href="{{ url('document_manager:search_analytics')}}">Analytics</a>
-      </li>
-      
-      {# <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-          Dropdown
-        </a>
-        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <a class="dropdown-item" href="#">Action</a>
-          <a class="dropdown-item" href="#">Another action</a>
-          <div class="dropdown-divider"></div>
-          <a class="dropdown-item" href="#">Something else here</a>
-        </div>
-      </li> #}
-      {# <li class="nav-item">
-        <a class="nav-link disabled" href="#">Disabled</a>
-      </li> #}
-    </ul>
-    {# <form class="form-inline my-2 my-lg-0">
-      <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-      <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-    </form> #}
+<nav class="navbar navbar-expand-lg bg-body-tertiary">
+  <div class="container-fluid">
+    <a class="navbar-brand" href="{{ url('documents:document_dashboard')}}">Document Search Engine</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav">
+        <li class="nav-item">
+          <a class="nav-link" href="{{ url('document_manager:document_dashboard')}}">Documents</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="{{ url('document_manager:document_search')}}">Search</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="{{ url('document_manager:search_analytics')}}">Analytics</a>
+        </li>
+        {# <li class="nav-item">
+          <a class="nav-link disabled" aria-disabled="true">Disabled</a>
+        </li> #}
+      </ul>
+      <ul class="navbar-nav ms-auto">
+        <li class="nav-item">
+          <a class="nav-link" href="{{ url('auth_manager:auth_logout')}}">Logout</a>
+        </li>
+      </ul>
+    </div>
   </div>
 </nav>
